--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -160,13 +160,13 @@
 - name:  Fourier analysis of neuronal oscillations and synchronization
   link:  /tutorial/fourier
 
-- name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
+- name:  Creating a BEM volume conduction model of the head for source reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_bem
 
-- name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
+- name:  Creating a FEM volume conduction model of the head for source reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_fem
 
-- name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
+- name:  Creating a volume conduction model of the head for source reconstruction of MEG data
   link:  /tutorial/headmodel_meg
 
 - name:  Cleaning artifacts using ICA
@@ -193,7 +193,7 @@
 - name:  Sensor-level ERF, TFR and connectivity analyses
   link:  /tutorial/sensor_analysis
 
-- name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
+- name:  Creating a sourcemodel for source reconstruction of MEG or EEG data
   link:  /tutorial/sourcemodel
 
 - name:  Time-frequency analysis using Hanning window, multitapers and wavelets
