--- a/_data/tag/mri.yml
+++ b/_data/tag/mri.yml
@@ -64,13 +64,13 @@
 - name:  Virtual channel analysis of epilepsy MEG data
   link:  /tutorial/epilepsy
 
-- name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
+- name:  Creating a BEM volume conduction model of the head for source reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_bem
 
-- name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
+- name:  Creating a FEM volume conduction model of the head for source reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_fem
 
-- name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
+- name:  Creating a volume conduction model of the head for source reconstruction of MEG data
   link:  /tutorial/headmodel_meg
 
 - name:  Analysis of human ECoG and sEEG recordings
@@ -79,6 +79,6 @@
 - name:  Source reconstruction of event-related fields using minimum-norm estimation
   link:  /tutorial/minimumnormestimate
 
-- name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
+- name:  Creating a sourcemodel for source reconstruction of MEG or EEG data
   link:  /tutorial/sourcemodel
 
