--- a/_data/tag/paraview.yml
+++ b/_data/tag/paraview.yml
@@ -1,6 +1,6 @@
 - name:  Getting started with ParaView
   link:  /getting_started/paraview
 
-- name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
+- name:  Creating a FEM volume conduction model of the head for source reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_fem
 
