--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -52,13 +52,13 @@
 - name:  Parametric and non-parametric statistics on event-related fields
   link:  /tutorial/eventrelatedstatistics
 
-- name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
+- name:  Creating a BEM volume conduction model of the head for source reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_bem
 
-- name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
+- name:  Creating a FEM volume conduction model of the head for source reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_fem
 
-- name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
+- name:  Creating a volume conduction model of the head for source reconstruction of MEG data
   link:  /tutorial/headmodel_meg
 
 - name:  Analysis of human ECoG and sEEG recordings
@@ -118,7 +118,7 @@
 - name:  Extracting the brain state and events from continuous sleep EEG
   link:  /tutorial/sleep
 
-- name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
+- name:  Creating a sourcemodel for source reconstruction of MEG or EEG data
   link:  /tutorial/sourcemodel
 
 - name:  Preprocessing and analysis of spike-train data
