--- a/_data/tag/ant.yml
+++ b/_data/tag/ant.yml
@@ -1,4 +1,4 @@
-- name:  ANT NeuroSDK
+- name:  Streaming realtime data from ANT NeuroSDK
   link:  /development/realtime/neurosdk
 
 - name:  Getting started with ASA and EEProbe
