--- a/_data/tag/neuralynx.yml
+++ b/_data/tag/neuralynx.yml
@@ -1,4 +1,4 @@
-- name:  Neuralynx
+- name:  Streaming realtime data from Neuralynx
   link:  /development/realtime/neuralynx
 
 - name:  How can I deal with a discontinuous Neuralynx LFP recording?
