--- a/_data/tag/tobi.yml
+++ b/_data/tag/tobi.yml
@@ -1,4 +1,4 @@
-- name:  TOBI - Tools for Brain-Computer Interaction
+- name:  Streaming realtime data from TOBI (Tools for Brain-Computer Interaction)
   link:  /development/realtime/tobi
 
 - name:  Converting an example eyetracker dataset for sharing in BIDS
