--- a/_data/tag/artinis.yml
+++ b/_data/tag/artinis.yml
@@ -1,4 +1,4 @@
-- name:  Artinis Medical Systems
+- name:  Streaming realtime data from Artinis Medical Systems
   link:  /development/realtime/artinis
 
 - name:  Converting an example NIRS dataset for sharing in BIDS
