--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -1,4 +1,4 @@
-- name:  Modular EEG, OpenEEG
+- name:  Streaming realtime data from Modular EEG (aka OpenEEG)
   link:  /development/realtime/modulareeg
 
 - name:  Example analysis pipeline for Biosemi data
