--- a/_data/tag/modeeg.yml
+++ b/_data/tag/modeeg.yml
@@ -1,3 +1,3 @@
-- name:  Modular EEG, OpenEEG
+- name:  Streaming realtime data from Modular EEG (aka OpenEEG)
   link:  /development/realtime/modulareeg
 
