--- a/_data/tag/realtime.yml
+++ b/_data/tag/realtime.yml
@@ -4,19 +4,19 @@
 - name:  Streaming realtime EEG data to and from Arduino
   link:  /development/realtime/arduino
 
-- name:  Artinis Medical Systems
+- name:  Streaming realtime data from Artinis Medical Systems
   link:  /development/realtime/artinis
 
-- name:  Soundcard input using PortAudio
+- name:  Streaming realtime data from soundcard using PortAudio
   link:  /development/realtime/audio2ft
 
-- name:  BCI2000
+- name:  Streaming realtime data from and to BCI2000
   link:  /development/realtime/bci2000
 
-- name:  Biosemi ActiveTwo EEG amplifier
+- name:  Streaming realtime data from Biosemi ActiveTwo EEG amplifier
   link:  /development/realtime/biosemi
 
-- name:  BrainStream
+- name:  Streaming realtime data from and to BrainStream
   link:  /development/realtime/brainstream
 
 - name:  Overview of the realtime buffer
@@ -58,40 +58,40 @@
 - name:  Suggested changes to the network protocol
   link:  /development/realtime/draft_network
 
-- name:  Emotiv neuroheadset
+- name:  Streaming realtime data from Emotiv neuroheadset
   link:  /development/realtime/emotiv
 
-- name:  Realtime fMRI from Siemens scanners
+- name:  Streaming realtime fMRI from Siemens scanners
   link:  /development/realtime/fmri
 
 - name:  Specific software implementations for realtime EEG/MEG/fMRI/NIRS
   link:  /development/realtime/implementation
 
-- name:  Jinga-Hi
+- name:  Streaming realtime data from Jinga-Hi
   link:  /development/realtime/jinga-hi
 
-- name:  Micromed
+- name:  Streaming realtime data from Micromed
   link:  /development/realtime/micromed
 
-- name:  Modular EEG, OpenEEG
+- name:  Streaming realtime data from Modular EEG (aka OpenEEG)
   link:  /development/realtime/modulareeg
 
-- name:  Neuralynx
+- name:  Streaming realtime data from Neuralynx
   link:  /development/realtime/neuralynx
 
-- name:  Neuromag/Elekta/Megin
+- name:  Streaming realtime data from Neuromag/Elekta/Megin
   link:  /development/realtime/neuromag
 
-- name:  ANT NeuroSDK
+- name:  Streaming realtime data from ANT NeuroSDK
   link:  /development/realtime/neurosdk
 
-- name:  Neurosky ThinkCap
+- name:  Streaming realtime data from Neurosky ThinkCap
   link:  /development/realtime/neurosky
 
-- name:  OpenBCI
+- name:  Streaming realtime data from OpenBCI
   link:  /development/realtime/openbci
 
-- name:  BrainVision Recorder Remote Data Access (RDA)
+- name:  Streaming realtime data from BrainVision Recorder Remote Data Access (RDA)
   link:  /development/realtime/rda
 
 - name:  FieldTrip buffer reference implementation
@@ -100,13 +100,13 @@
 - name:  Scratchpad for the realtime buffer interface
   link:  /development/realtime/scratchpad
 
-- name:  TMSI EEG amplifiers
+- name:  Streaming realtime data from TMSI EEG amplifiers
   link:  /development/realtime/tmsi
 
-- name:  TOBI - Tools for Brain-Computer Interaction
+- name:  Streaming realtime data from TOBI (Tools for Brain-Computer Interaction)
   link:  /development/realtime/tobi
 
-- name:  Unicorn Hybrid Black
+- name:  Streaming realtime data from Unicorn Hybrid Black
   link:  /development/realtime/unicorn
 
 - name:  Example real-time average
