--- a/_data/tag/siemens.yml
+++ b/_data/tag/siemens.yml
@@ -1,3 +1,3 @@
-- name:  Realtime fMRI from Siemens scanners
+- name:  Streaming realtime fMRI from Siemens scanners
   link:  /development/realtime/fmri
 
