--- a/_data/tag/tms.yml
+++ b/_data/tag/tms.yml
@@ -1,4 +1,4 @@
-- name:  TMSI EEG amplifiers
+- name:  Streaming realtime data from TMSI EEG amplifiers
   link:  /development/realtime/tmsi
 
 - name:  Which datasets are used in the documentation and where are they used?
