--- a/_data/tag/neuromag.yml
+++ b/_data/tag/neuromag.yml
@@ -16,3 +16,6 @@
 - name:  Getting started with Neuromag/Elekta/Megin data
   link:  /getting_started/neuromag
 
+- name:  Template 3-D gradiometer descriptions
+  link:  /template/gradiometer
+
