--- a/_data/tag/yokogawa.yml
+++ b/_data/tag/yokogawa.yml
@@ -4,3 +4,6 @@
 - name:  Getting started with Yokogawa data
   link:  /getting_started/yokogawa
 
+- name:  Template 3-D gradiometer descriptions
+  link:  /template/gradiometer
+
