--- a/_data/tag/cfg.yml
+++ b/_data/tag/cfg.yml
@@ -7,6 +7,9 @@
 - name:  Reference documentation
   link:  /reference
 
+- name:  Template 3-D gradiometer descriptions
+  link:  /template/gradiometer
+
 - name:  Introduction to the FieldTrip toolbox
   link:  /tutorial/introduction
 
