--- a/_data/tag/freq.yml
+++ b/_data/tag/freq.yml
@@ -127,6 +127,9 @@
 - name:  Time-frequency analysis of combined MEG/EEG data
   link:  /workshop/natmeg2014/timefrequency
 
+- name:  Time-frequency analysis using Hanning window, multitapers and wavelets
+  link:  /workshop/ni2_timefrequencyanalysis
+
 - name:  Time-frequency analysis of EEG data
   link:  /workshop/oslo2019/timefrequency
 
