--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -94,6 +94,9 @@
 - name:  Getting started with LIMO MEEG
   link:  /getting_started/limo
 
+- name:  Getting started with MNE(-python)
+  link:  /getting_started/mne
+
 - name:  Getting started with Neuromag/Elekta/Megin data
   link:  /getting_started/neuromag
 
