--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,8 @@ highlighter: rouge
 kramdown:
   syntax_highlighter_opts:
     default_lang: matlab
+    line_numbers: false
+    wrap: true
 
 plugins:
   - jekyll-last-modified-at
