--- a/_data/tag/script.yml
+++ b/_data/tag/script.yml
@@ -16,6 +16,6 @@
 - name:  Making a memory efficient analysis pipeline
   link:  /tutorial/memory
 
-- name:  Creating a clean and efficient analysis pipeline
+- name:  Creating a clean analysis pipeline
   link:  /tutorial/scripting
 
