--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -373,6 +373,9 @@
 - name:  Should I rereference prior to or after ICA for artifact removal?
   link:  /faq/should_I_rereference_prior_to_or_after_ica_for_artifact_removal
 
+- name:  Should I use t or F values for cluster-based permutation tests?
+  link:  /faq/should_I_use_t_or_F_values_for_cluster-based_permutation_tests
+
 - name:  Should I add FieldTrip with all subdirectories to my MATLAB path?
   link:  /faq/should_i_add_fieldtrip_with_all_subdirectories_to_my_matlab_path
 
