--- a/_data/tag/statistics.yml
+++ b/_data/tag/statistics.yml
@@ -58,6 +58,9 @@
 - name:  How NOT to interpret results from a cluster-based permutation test
   link:  /faq/how_not_to_interpret_results_from_a_cluster-based_permutation_test
 
+- name:  Should I use t or F values for cluster-based permutation tests?
+  link:  /faq/should_I_use_t_or_F_values_for_cluster-based_permutation_tests
+
 - name:  What is the idea behind statistical inference at the second-level?
   link:  /faq/what_is_the_idea_behind_statistical_inference_at_the_second-level
 
