--- a/_data/tag/ct.yml
+++ b/_data/tag/ct.yml
@@ -178,7 +178,7 @@
 - name:  Extracting the brain state and events from continuous sleep EEG
   link:  /tutorial/sleep
 
-- name:  Visual artifact rejection
+- name:  Visual or manual artifact rejection
   link:  /tutorial/visual_artifact_rejection
 
 - name:  Simulating and estimating, what about model (mis)match?
