--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -202,7 +202,7 @@
 - name:  Time-frequency analysis using Hanning window, multitapers and wavelets
   link:  /tutorial/timefrequencyanalysis
 
-- name:  Visual artifact rejection
+- name:  Visual or manual artifact rejection
   link:  /tutorial/visual_artifact_rejection
 
 - name:  FieldTrip Walkthrough
