--- a/_data/tag/preproc.yml
+++ b/_data/tag/preproc.yml
@@ -139,7 +139,7 @@
 - name:  Dealing with TMS-EEG datasets
   link:  /tutorial/tms-eeg
 
-- name:  Visual artifact rejection
+- name:  Visual or manual artifact rejection
   link:  /tutorial/visual_artifact_rejection
 
 - name:  Preprocessing and event-related activity in combined MEG/EEG data
