--- a/_data/tag/mesh.yml
+++ b/_data/tag/mesh.yml
@@ -4,3 +4,6 @@
 - name:  Getting started with ParaView
   link:  /getting_started/paraview
 
+- name:  Getting started with SimNIBS
+  link:  /getting_started/simnibs
+
