--- a/_data/tag/volume.yml
+++ b/_data/tag/volume.yml
@@ -13,3 +13,6 @@
 - name:  Getting started with Seg3D
   link:  /getting_started/seg3d
 
+- name:  Getting started with SimNIBS
+  link:  /getting_started/simnibs
+
