--- a/_data/tag/headmodel.yml
+++ b/_data/tag/headmodel.yml
@@ -73,6 +73,9 @@
 - name:  Getting started with Seg3D
   link:  /getting_started/seg3d
 
+- name:  Getting started with SimNIBS
+  link:  /getting_started/simnibs
+
 - name:  Reference documentation
   link:  /reference
 
