--- a/_data/tag/seg.yml
+++ b/_data/tag/seg.yml
@@ -10,6 +10,9 @@
 - name:  Getting started with Seg3D
   link:  /getting_started/seg3d
 
+- name:  Getting started with SimNIBS
+  link:  /getting_started/simnibs
+
 - name:  Creating a FEM volume conduction model of the head for source reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_fem
 
